<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TestSpringForAndroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="id_label">The ID is</string>
    <string name="id_value">[id]</string>
    <string name="content_label">The Content is</string>
    <string name="content_value">[content]</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_rest_with_xml">RestWithXmlActivity</string>
    <string name="title_activity_chuck_norris_main">ChuckNorrisMainActivity</string>

</resources>
