<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" >

        <Button
            android:id="@+id/goToXmlTestButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Test Chuck Norris API" />

        <TextView
            android:id="@+id/debugText"
            android:text="@string/hello_world"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/goToXmlTestButton" />

        <TextView
            android:id="@+id/id_label"
            android:text="@string/id_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/debugText" />

        <TextView
            android:id="@+id/content_label"
            android:text="@string/content_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_below="@id/id_label"
            android:layout_alignParentLeft="true" />

        <TextView
            android:id="@+id/id_value"
            android:text="@string/id_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/id_label"
            android:layout_toRightOf="@id/id_label"
            android:layout_marginLeft="50dp" />

        <TextView
            android:id="@+id/content_value"
            android:text="@string/content_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/content_label"
            android:layout_alignLeft="@id/id_value" />

    </RelativeLayout>

</ScrollView>